--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -4,8 +4,19 @@
 
 \section{Contexto}
 
-En el nuevo ambiente de las tecnologías de la información se encuentran los usuarios de estas tecnologías y las organizaciones, cualquier movimiento de almacenamiento masivo puede ser realizado mediante  modelos basados en el cómputo nube, es decir, el almacenamiento en la nube. Asimismo, al manejar un gran volumen de información, los usuarios buscan la posibilidad de que al almacenar esos datos puedan ser accedidos a ellos de manera fácil~\cite{Nubei}. \\ \\ 
-El cómputo nube es un término general utilizado para nombrar así a la provisión de servicios de almacenamiento a través de Internet que ha sido utilizado para facilitar el cambio de los modelos de negocios, agilizar procesos y reducir los costos de operación. Uno de los mayores beneficios que ofrece este servicio es la virtualización de los centros de datos, que pueden operar de manera automatizada, sin  necesidad de la presencia de una persona física y ser pueden ser gestionados en cualquier momento y tiempo.De acuerdo con un estudio realizado por la consultora Market Research Media, el cloud computing generará \$270,000 millones de dólares en 2020, por lo que empresas como Google, Amazon, IBM, Oracle y Apple han adoptado este sistema como parte del servicio brindado a sus consumidores, por ejemplo Google Drive o iCloud, a través de los cuales, con sólo estar conectados a Internet, los usuarios tienen la posibilidad de utilizarlos ~\cite{Nubecomp}. \\ \\ Básicamente el almacenamiento en la nube se caracteriza por 5 puntos esenciales que son: 
+En el nuevo ambiente de las tecnologías de la información se encuentran los usuarios de estas tecnologías y las organizaciones, cualquier movimiento de almacenamiento masivo computacional puede ser realizado mediante modelos  basados en el cómputo nube. Asimismo, al manejar un gran volumen de información, los usuarios buscan la posibilidad de que al almacenar esos datos, puedan ser accedidos a ellos de manera fácil y desde cualquier ligar o dispositivo en donde han accedido los usuarios ~\cite{Nubei}. \\ \\ 
+
+Según un estudio realizado por Computerworld (una revista mundial reconocida por su enfoque a las tecnologías de la informaión y comunicación) a empresas de tecnologías de la información, aseguran que el 42\% de estas empresas de TI están planeando aumentar el gasto en Cloud Computing (Cómputo nube), siendo el crecimiento mayor en las empresas con más de 1000 empleados (52\%). Las 5 áreas de mayor crecimiento se ilustran en la figura ~\ref{fig:1-1-1}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=15cm, height=5cm]{./images/aumentoCloudComputing.jpg}
+	\caption{Aumento del gasto por las empresas en cómputo nube}
+	\label{fig:1-1-1}
+\end{figure}
+
+
+El cómputo nube es un término general utilizado para nombrar así a la provisión de servicios de almacenamiento a través de internet que ha sido utilizado para facilitar el cambio de los modelos de negocios, agilizar procesos y reducir los costos de operación en las grandes empresas u organizaciones. Uno de los mayores beneficios que ofrece este servicio es la virtualización de los centros de datos, que pueden operar de manera automatizada, sin  necesidad de la presencia de una persona física y ser pueden ser gestionados en cualquier momento y tiempo. De acuerdo con un estudio realizado por la consultora Market Research Media, el cloud computing generará \$270,000 millones de dólares en 2020, por lo que empresas como Google, Amazon, IBM, Oracle y Apple han adoptado este sistema como parte del servicio brindado a sus consumidores, por ejemplo Google Drive o iCloud, a través de los cuales, con sólo estar conectados a Internet, los usuarios tienen la posibilidad de utilizarlos ~\cite{Nubecomp}. \\ \\ Básicamente el almacenamiento en la nube se caracteriza por 5 puntos esenciales que son: 
 	\begin{itemize}
 		\item \textbf{Autoservicio on-demand o pago por evento}  
 		\item \textbf{Acceso ubicuo a la red (uso de los servicios cuando sea y donde sea)}  
@@ -15,12 +26,28 @@ El cómputo nube es un término general utilizado para nombrar así a la provisi
  \end{itemize}
 
 \section{Problemática}
-Hoy en día el manejo de información en la sociedad juega un papel importante en el desarrollo de las actividades que la conforman. Millones de personas en el mundo tienen la facilidad de acceder a un dispositivo electrónico que les permite manipular esta información o almacenarla para posteriormente darle un uso específico. La información que circula en dispositivos electrónicos es mayor a la memoria disponible que ofrecen estos, a medida que el volumen de información aumenta, también lo hace la demanda para los servicios de almacenamiento en línea ~\cite{Bellare}. Un gran incremento en el uso de estos servicios implica tener más infraestructura y personal para que los sistemas de almacenamiento tengan más capacidad y puedan cubrir la demanda que se presenta en el mercado. Si bien el almacenamiento logró dar buenos resultados al cliente en sus primeras etapas, ahora la preocupación por el incremento de infraestructura para seguir dando esos resultados se ha incrementado considerablemente  ~\cite{Keelveedhi}.
+Hoy en día el manejo de información en la sociedad juega un papel importante en el desarrollo de las actividades que la conforman. Millones de personas en el mundo tienen la facilidad de acceder a un dispositivo electrónico que les permite manipular esta información o almacenarla ya sea en un dispositivo físico o en algo más nuevo y eficiente como la nube, para posteriormente darle un uso específico.
+El cambio en las estrategias de negocio y la explosión de datos digitales se ha lanzado enormes demandas de alto volumen y almacenamiento de datos eficiente. Debido a los limitados recursos financieros y altos gastos de almacenamiento de datos electrónicos, los usuarios prefieren almacenar sus datos en los entornos de nube, el almacenamiento en la nube permite a sus usuarios transferir sus datos y aplicaciones en la web para que puedan operar esos programas sin ninguna infraestructura física necesaria ~\cite{Keelveedhi}.
 \\
-El cambio en las estrategias de negocio y la explosión de datos digitales se ha lanzado enormes demandas de alto volumen y almacenamiento de datos eficiente. Debido a los limitados recursos financieros y altos gastos de almacenamiento de datos electrónicos, los usuarios prefieren almacenar sus datos en los entornos de nube, el almacenamiento en la nube permite a sus usuarios transferir sus datos y aplicaciones en la web para que puedan operar esos programas sin ninguna infraestructura física necesaria. Hay recursos limitados de almacenamiento y de red en el sistema de nube. La totalidad de los servicios en la nube que se han ofrecido hasta ahora, permite a los usuarios detener los problemas mediante el uso de los dos aspectos importantes de la fiabilidad y elasticidad ~\cite{Keelveedhi}.
-\\ \\
+ Ahora bien, la información que circula en dispositivos electrónicos es mayor a la memoria disponible que ofrecen estos, a medida que el volumen de información aumenta, también lo hace la demanda para los servicios de almacenamiento en línea ~\cite{Bellare}. Un gran incremento en el uso de estos servicios implica tener más infraestructura y personal para que los sistemas de almacenamiento tengan más capacidad y puedan cubrir la demanda que se presenta en el mercado. Si bien el almacenamiento logró dar buenos resultados al cliente en sus primeras etapas, ahora la preocupación por el incremento de infraestructura para seguir dando esos resultados se ha incrementado considerablemente  ~\cite{Keelveedhi}.
+\\ 
+
+Para entender un poco más acerca de la problemática que se enfrenta el almacenamiento en la nube, mostramos el siguiente estudio realizado por EFE/Cisco:\\ 
+
+EFE/Cisco realizó una estimación en el año 2014 en su cuarto informe anual Índice Global sobre Cloud (2013-2018), donde prevé que en 2018 la mitad de la población mundial tendrá internet en sus hogares y más de la mitad almacenará contenidos en servicios personales de almacenamiento en la nube. El estudio adelanta que se triplicará el crecimiento de tráfico en los centros de datos en los próximos cinco años y la nube representará el 76\% de ese total, mientras que en 2013 éste solo representaba el 54\%, lo que supondría un aumento anual de 32\%. El tráfico en centros de datos, contando el saliente a usuarios finales, entre centros y dentro del propio sistema, superará los 3,1 zettabytes de 2013 y llegará a los 8,6 que se esperan registrar en 2018, suponiendo una tasa anual del 23\% ~\cite{cisco}. 
+\\ 
+En 2018, el 53\% de los usuarios de internet con red doméstica usarán servicios de almacenamiento en la nube, aportando un tráfico medio por usuario de 811 mb mensuales, lejos de los 186 mb de 2013. Además se espera, según la nota de prensa, que en 2018 el 69\% de la carga de trabajo en la nube se realice en centros de datos con nubes privadas, un dato que fue del 78\% en 2013. El resto de cargas de trabajo, el 31\%, se realizarán en la nube pública, subiendo desde el 22\% del año pasado ~\cite{cisco}. Crecimiento en el tráfico de información el la nube ~\ref{fig:1-2-1} \\
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=13cm, height=5cm]{./images/crecimientoNube.jpg}
+	\caption{Crecimiento global del tráfico en la nube}
+	\label{fig:1-2-1}
+\end{figure}
+
 Una de las principales razones del incremento en el tamaño en la estructura de almacenamiento de servicios en linea es la duplicación de archivos por varios y diferentes usuarios, existen muchas copias en la nube de un mismo archivo que se encuentra presente en diferentes cuentas de usuarios. Por ejemplo \textbf{\textit{n}}cantidad de  usuarios pueden subir la misma canción a la nube, por lo tanto esta se encuentra almacenada en las \textbf{\textit{n}} cantidad de cuentas que tiene registro la nube, esta misma canción que se encuentra almacenada está cubriendo un espacio en la memoria del servicio, si se tuviera una sóla copia almacenada de esta canción se ahorraría mucho espacio en la nube que podría utilizarse para el aalmacenamiento de un archivo diferente . Según un estudio ~\cite{popa} realizado por HP se estima que hay 1 Exabyte de datos almacenados en la nube, además de 2012 a 2017, las cargas de trabajo de los centros de datos crecerán 2.3 veces, mientras que en la nube aumentarán 3.7 veces, lo cual implica que el Exabyte que se estima se podría llegar a triplicar y las empresas que proporcionan estos servicios disminuyen su oferta en el mercado. 
 \\ 
+Otro punto importante 
 %Sumado al agraviante problema de crecimiento en la estructura de almacenamiento en línea, existe un elemento que pocas organizaciones y usuarios contemplan para el almacenamiento de su información, y es la seguridad. Las plataformas que ahora ofrecen el servicio de almacenamiento en la nube, no contemplan la protección e integridad de la información, este servicio está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información importante para los usuarios. Dicho servicio carece de algún esquema de seguridad y por tanto no se puede garantizar la permanencia de los usuarios en el consumo del servicio en la plataforma de almacenamiento. 
 %Dejar sin resolver la seguridad de la infofrmación, puede generar negativas consecuenicias hacia cualquier usuario de la plataforma de almacencamiento, cualquier individuo que tenga acceso a los archivos almacenados en ésta plataforma, podrá visualizar el contenido de estos, comprometiendo la fidelidad e integridad de la información para poder usarla en situaciones que pudieran llegar a perjudicar al usuario. 
 \\
