--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -128,7 +128,7 @@
 \cfinput{archivosTex/introduccion}
 
 %------------------------------------------------------------------------------------------------------------------------------------
-\chapter{Preliminares}
+\chapter{Marco Teórico}
 
 \cfinput{archivosTex/preliminares}
 
